# Human-Pong

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  openpose.py.patch  questions
prototypes/: bodypix.py
prototypes/multiplayer/: client.cpp  gethostbyname.cpp  gst_pipeline.cpp  gst_pipeline.h  makefile  networks.cpp  networks.h  pong_client.cpp  pong_client.h  pong_config.h  pong_packets.cpp  pong_packets.h  pong_server.cpp  pong_server.h  server.cpp
resources/models/: bodypix_mobilenet_float_050_model-stride16.pb  bodypix_mobilenet_float_050_model-stride8.pb
src/: BackgroundBench.cpp  BackgroundMask.cpp  BackgroundMask.hpp  BackgroundSub.cpp  BackgroundSub.hpp  PongTest.cpp  PoseEstimation.cpp  PoseEstimation.hpp  ProcessImg.cpp  ProcessImg.h  TestPoseEstimation.cpp  game.cpp  game.hpp  gethostbyname.h  main.cpp  pong_client.cpp  pong_config.h  pong_server.cpp  pong_server.h
